# Insightia_cli

./: README.md  pyproject.toml
insighta/: main.py
insighta/api/: client.py
insighta/auth/: commands.py  oauth.py
insighta/config/: credentials.py
insighta/profiles/: commands.py
