[project]
name = "insighta-cli"
version = "0.1.0"
description = "CLI tool for Insighta Labs+"
authors = [{name = "Insighta Labs"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
insighta = "insighta.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["insighta"]
